--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -1,3 +1,12 @@
 .knowledge {
     margin: 10rem auto;
 }
+
+.discipline-title {
+    text-align: center;
+}
+
+.discipline-icon {
+    text-align: center;
+    font-size: 3rem;
+}
