--- a/src/App/NavBar/NavBar.scss
+++ b/src/App/NavBar/NavBar.scss
@@ -1,3 +1,9 @@
 .navbar {
-    margin: 1rem 0;
+    position: fixed;
+    width: 100%;
+    height: 7rem;
+}
+
+.logo-container {
+    align-items: center;
 }
