--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,23 +1,4 @@
-.App {
+.body {
     // border-top: 0.5rem solid;
-    padding-top: 3rem;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+    padding-top: 7rem;
 }
