--- a/src/App/ContactMe/ContactMe.scss
+++ b/src/App/ContactMe/ContactMe.scss
@@ -1,3 +1,9 @@
 .contact-me {
+    text-align: center;
+    width: 50vw;
     margin-bottom: 10rem;
+}
+
+.send-button {
+    justify-content: center !important;
 }
