Adds Splash and AboutMe pages

--- a/src/App/Splash/Splash.scss
+++ b/src/App/Splash/Splash.scss
@@ -1,55 +1,23 @@
-@import '../../styles.scss';
-
 .splash {
-    @media screen and (min-width: 1280px) {
-        height: 100vh;
-    }
-}
-
-.body-container {
+    height: 100vh;
     display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.splash-content {
+    display: flex;
+    flex-grow: 1;
     align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    // @include tablet-and-under {
+    //     flex-direction: column;
+    // }
 }
 
-.text-container {
-    text-align: left;
-}
-
-.fa-arrow-down {
+.arrow-down {
+    text-align: center;
     font-size: 2rem;
-}
-
-.is-massive {
-    font-size: 6rem;
-    font-weight: 800;
-    text-align: center;
-}
-
-.subtitle {
-    text-align: center;
-}
-
-.buttons {
-    justify-content: center;
-}
-
-.social-links {
-    font-size: 2rem;
-    text-align: center;
-}
-
-.social-icon {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-}
-.selfie-container {
-    margin-left: auto;
-    margin-right: auto;
-    border: 1rem $light-purple;
-    background: url('../../assets/selfie.jpg');
-    background-size: 200%;
-    background-position: 60% 20%;
-    border-radius: 50%;
-    width: 15rem;
-    height: 15rem;
+    padding: 1rem 0;
 }
