Adds ContactMe, Experience, Footer, and NavBar

--- a/src/App/ContactMe/ContactMe.scss
+++ b/src/App/ContactMe/ContactMe.scss
@@ -1,7 +1,10 @@
 .contact-me {
-    text-align: center;
-    width: 50vw;
-    margin-bottom: 10rem;
+    padding-top: 10rem !important;
+    padding-bottom: 10rem !important;
+}
+
+.contact-content {
+    border: none;
 }
 
 .send-button {
