--- a/src/App/Experience/Experience.scss
+++ b/src/App/Experience/Experience.scss
@@ -1,8 +1,4 @@
-.about-me {
+.experience {
     padding-top: 10rem !important;
     padding-bottom: 10rem !important;
-}
-
-.about-me-content {
-    border: none;
 }
