--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -1,12 +1,8 @@
 .knowledge {
-    margin: 10rem auto;
+    padding-top: 10rem !important;
+    padding-bottom: 10rem !important;
 }
 
-.discipline-title {
-    text-align: center;
-}
-
-.discipline-icon {
-    text-align: center;
-    font-size: 3rem;
+.tags {
+    margin-bottom: 0 !important;
 }
