adds mobile friendly styling

--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -1,6 +1,11 @@
+@import '../../styles/breakpoints.scss';
+
 .knowledge {
-    padding-top: 10rem !important;
-    padding-bottom: 10rem !important;
+    padding-top: 7rem !important;
+    @include desktop-up {
+        padding-top: 10rem !important;
+        padding-bottom: 10rem !important;
+    }
 }
 
 .tags {
