--- a/src/App/Splash/Portrait/Portrait.scss
+++ b/src/App/Splash/Portrait/Portrait.scss
@@ -1,6 +1,7 @@
 .portrait {
     width: 15rem;
     height: 15rem;
+    margin: 2rem;
 
     background-image: url("../../../assets/selfie.jpg");
     background-position: center;
