--- a/src/App/AboutMe/AboutMe.scss
+++ b/src/App/AboutMe/AboutMe.scss
@@ -1,6 +1,11 @@
+@import '../../styles/breakpoints.scss';
+
 .about-me {
-    padding-top: 10rem !important;
-    padding-bottom: 10rem !important;
+    padding-top: 7rem !important;
+    @include desktop-up {
+        padding-top: 10rem !important;
+        padding-bottom: 10rem !important;
+    }
 }
 
 .about-me-content {
