--- a/src/App/ContactMe/ContactMe.scss
+++ b/src/App/ContactMe/ContactMe.scss
@@ -1,6 +1,15 @@
+@import '../../styles/breakpoints.scss';
+
+.footer {
+    margin-top: 2rem;
+}
+
 .contact-me {
-    padding-top: 10rem !important;
-    padding-bottom: 10rem !important;
+    padding-top: 7rem !important;
+    @include desktop-up {
+        padding-top: 10rem !important;
+        padding-bottom: 10rem !important;
+    }
 }
 
 .contact-content {
