--- a/src/App/Experience/Experience.scss
+++ b/src/App/Experience/Experience.scss
@@ -1,4 +1,9 @@
+@import '../../styles/breakpoints.scss';
+
 .experience {
-    padding-top: 10rem !important;
-    padding-bottom: 10rem !important;
+    padding-top: 7rem !important;
+    @include desktop-up {
+        padding-top: 10rem !important;
+        padding-bottom: 10rem !important;
+    }
 }
