--- a/src/App/NavBar/NavBar.scss
+++ b/src/App/NavBar/NavBar.scss
@@ -1,9 +1,22 @@
 .navbar {
-    position: fixed;
-    width: 100%;
     height: 7rem;
+    // display: flex;
+    // align-items: center;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .logo-container {
     align-items: center;
+}
+
+.navbar-burger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.exit-icon {
+    text-align: center;
 }
