--- a/src/App/NavBar/AnimatedLogo/AnimatedLogo.scss
+++ b/src/App/NavBar/AnimatedLogo/AnimatedLogo.scss
@@ -6,4 +6,8 @@
     border-radius: 0.8rem;
     height: 5rem;
     width: 5rem;
+
+    background-image: url("../../../assets/logo.jpg");
+    background-position: center;
+    background-size: 125%;
 }
