Changes to Footer, changes tags on Knowledge

--- a/src/App/Footer/Footer.scss
+++ b/src/App/Footer/Footer.scss
@@ -7,6 +7,10 @@
     margin-right: 0.5rem;
 }
 
+.resume-button {
+    text-align: right;
+}
+
 .footer-right {
     text-align: right;
     font-size: 1.5rem;
