--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,4 @@ $link: hsl(0, 0%, 29%);
 @import "../../node_modules/bulma/sass/form/_all.sass";
 @import "../../node_modules/bulma/sass/components/navbar.sass";
 @import "../../node_modules/bulma/sass/layout/_all.sass";
+@import '../../node_modules/bulma-divider/dist/css/bulma-divider.sass'
