--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -9,5 +9,19 @@
 }
 
 .tags {
-    margin-bottom: 0 !important;
+    margin-bottom: 1rem !important;
+    margin-left: 2rem;
+}
+
+.tag {
+    font-size: 1rem !important;
+}
+
+.category {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.sub-category-title {
+    margin-left: 1rem;
 }
