--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,7 +7,11 @@ $family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Ox
 
 $link: hsl(0, 0%, 29%);
 
+$message-radius: 0.5rem;
+$message-body-border-width: 0; 
+
 // Import only what you need from Bulma
+@import "../../node_modules/bulma/bulma.sass";
 @import "../../node_modules/bulma/sass/utilities/_all.sass";
 @import "../../node_modules/bulma/sass/base/_all.sass";
 @import "../../node_modules/bulma/sass/elements/_all.sass";
