--- a/src/App/Experience/Experience.scss
+++ b/src/App/Experience/Experience.scss
@@ -1,9 +1,35 @@
 @import '../../styles/breakpoints.scss';
 
+
 .experience {
     padding-top: 7rem !important;
     @include desktop-up {
         padding-top: 10rem !important;
         padding-bottom: 10rem !important;
     }
+}
+
+.cover-photo {
+    background-position: 50% 50%;
+    background-size: cover;
+    height: 20rem;
+}
+
+.company-logo {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 0.5rem;
+}
+
+.company-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 1rem;
+}
+
+.title-row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
 }
