--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,7 +7,8 @@ $family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Ox
 
 $link: hsl(0, 0%, 29%);
 
-$message-radius: 0.5rem;
+$message-radius: 1rem;
+$message-header-radius: 1rem;
 $message-body-border-width: 0; 
 
 // Import only what you need from Bulma
