--- a/src/App/AboutMe/AboutMe.scss
+++ b/src/App/AboutMe/AboutMe.scss
@@ -5,6 +5,8 @@
     background-position: 50% 62%;
     background-size: cover;
     height: 20rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
 }
 
 .about-me {
