--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -1,3 +1,12 @@
+.knowledge {
+    background-image: url('../../assets/knowledge_pattern.png');
+    background-repeat: repeat;
+    background-size: 25%;
+}
+
+.content-area {
+    background: white;
+}
 .tags {
     margin-bottom: 1rem !important;
     margin-left: 2rem;
