Adds background pattern to ContactMe

--- a/src/App/ContactMe/ContactMe.scss
+++ b/src/App/ContactMe/ContactMe.scss
@@ -1,3 +1,14 @@
+.contact-me {
+    background-image: url('../../assets/contact-pattern.png');
+    background-repeat: repeat;
+    background-attachment: fixed;
+    background-size: 16rem;
+}
+
+.content-area {
+    background: white;
+}
+
 .send-button {
     justify-content: center !important;
 }
