--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -1,7 +1,8 @@
 .knowledge {
-    background-image: url('../../assets/knowledge_pattern.png');
+    background-image: url('../../assets/knowledge-pattern.png');
     background-repeat: repeat;
-    background-size: 25%;
+    background-attachment: fixed;
+    background-size: 20rem;
 }
 
 .content-area {
