Makes background full width, adds updated resume

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -5,3 +5,19 @@ html {
         font-size: 12px !important;
     }
 }
+
+#knowledge {
+    background-image: url('../assets/knowledge-pattern.png');
+    background-repeat: repeat;
+    background-attachment: fixed;
+    background-size: 18rem;
+    background-position: center;
+}
+
+#contact-me {
+    background-image: url('../assets/contact-pattern.png');
+    background-repeat: repeat;
+    background-attachment: fixed;
+    background-size: 15rem;
+    background-position: center;
+}
