--- a/src/HOCs/withCenterFormatting/withCenterFormatting.scss
+++ b/src/HOCs/withCenterFormatting/withCenterFormatting.scss
@@ -2,6 +2,7 @@
 
 .with-title {
     padding-top: 7rem !important;
+    background: white;
     @include desktop-up {
         min-height: 100vh;
         padding-top: 10rem !important;
