--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -10,7 +10,7 @@ html {
     background-image: url('../assets/knowledge-pattern.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 18rem;
+    background-size: 20%;
     background-position: center;
 }
 
@@ -18,6 +18,6 @@ html {
     background-image: url('../assets/contact-pattern.png');
     background-repeat: repeat;
     background-attachment: fixed;
-    background-size: 15rem;
+    background-size: 12.5%;
     background-position: center;
 }
