--- a/src/App/NavBar/NavBar.scss
+++ b/src/App/NavBar/NavBar.scss
@@ -10,7 +10,9 @@
 
 .drop-shadow {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.096);
+    background-color: hsl(0, 0%, 98%);
     transition: box-shadow 0.1s ease-in-out;
+    transition: background-color 1s ease-in-out;
 }
 
 .logo-container {
