--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,22 +1,23 @@
 @charset "utf-8";
 
 // Update Bulma's global variables
-$family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+$family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 
 $link: hsl(0, 0%, 29%);
+$white-ter: hsl(0, 0%, 98%);
 
 $message-radius: 1rem;
 $message-header-radius: 1rem;
-$message-body-border-width: 0; 
+$message-body-border-width: 0;
 
 // Import only what you need from Bulma
-@import "../../node_modules/bulma/bulma.sass";
-@import "../../node_modules/bulma/sass/utilities/_all.sass";
-@import "../../node_modules/bulma/sass/base/_all.sass";
-@import "../../node_modules/bulma/sass/elements/_all.sass";
-@import "../../node_modules/bulma/sass/form/_all.sass";
-@import "../../node_modules/bulma/sass/components/navbar.sass";
-@import "../../node_modules/bulma/sass/layout/_all.sass";
-@import '../../node_modules/bulma-divider/dist/css/bulma-divider.sass'
+@import '../../node_modules/bulma/bulma.sass';
+@import '../../node_modules/bulma/sass/utilities/_all.sass';
+@import '../../node_modules/bulma/sass/base/_all.sass';
+@import '../../node_modules/bulma/sass/elements/_all.sass';
+@import '../../node_modules/bulma/sass/form/_all.sass';
+@import '../../node_modules/bulma/sass/components/navbar.sass';
+@import '../../node_modules/bulma/sass/layout/_all.sass';
+@import '../../node_modules/bulma-divider/dist/css/bulma-divider.sass';
