--- a/src/App/NavBar/Logo/Logo.scss
+++ b/src/App/NavBar/Logo/Logo.scss
@@ -5,15 +5,15 @@
     align-items: center;
 }
 .logo {
-    border-radius: 0.8rem;
+    border-radius: 0.4rem;
     height: 3.5rem;
     width: 3.5rem;
     @include desktop-up {
-        height: 5rem;
-        width: 5rem;
+        height: 2.5rem;
+        width: 2.5rem;
     }
 
-    background-image: url("../../../assets/logo.jpg");
+    background-image: url('../../../assets/logo.jpg');
     background-position: center;
     background-size: 125%;
 }
