--- a/src/App/Experiences/Experiences.scss
+++ b/src/App/Experiences/Experiences.scss
@@ -1,6 +1,7 @@
 .experiences {
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
+    // flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
