--- a/src/App/AboutMe/AboutMe.scss
+++ b/src/App/AboutMe/AboutMe.scss
@@ -11,11 +11,13 @@
 
 .about-me-text {
     margin-left: 4rem;
+    line-height: 24px;
 }
 
 .about-me-text mark {
     background-color: #eef6fc;
-    padding: 5px;
+    padding: 5px 10px;
+    margin: 10px 0px;
     border-radius: 20px;
     transition: 0.2s;
     white-space: nowrap;
