--- a/src/App/Splash/Splash.scss
+++ b/src/App/Splash/Splash.scss
@@ -28,3 +28,15 @@
     font-size: 2rem;
     padding: 1rem 0;
 }
+
+.portrait {
+    width: 15rem;
+    height: 15rem;
+    margin: 2rem;
+
+    background-image: url("../../assets/selfie.jpg");
+    background-position: center;
+    background-size: cover;
+
+    border-radius: 1rem;
+}
