--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -15,3 +15,11 @@
 .sub-category-title {
     margin-left: 1rem;
 }
+
+.skill {
+    transition: 0.2s !important;
+}
+
+.skill:hover {
+    background-color: #cde9ff !important; 
+}
