--- a/src/App/NavBar/NavBar.scss
+++ b/src/App/NavBar/NavBar.scss
@@ -15,6 +15,11 @@
     transition: background-color 1s ease-in-out;
 }
 
+.make-visible {
+    display: flex !important;
+    transition: display 0.1s ease-in-out;
+}
+
 .logo-container {
     align-items: center;
 }
@@ -30,7 +35,7 @@
 }
 
 .logo-container {
-    display: flex;
+    display: none;
     align-items: center;
 }
 .logo {
