add theme button

--- a/src/App/Splash/Splash.scss
+++ b/src/App/Splash/Splash.scss
@@ -55,3 +55,9 @@
     margin: 0.5rem 1rem;
     align-self: stretch;
 }
+
+.theme-button {
+    position: fixed;
+    bottom: 2rem;
+    right: 2rem;
+}
