--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,3 +46,7 @@ $message-body-border-width: 0;
 .dark-background {
     background-color: $black-ter;
 }
+
+.dark-signature {
+    filter: invert(100%);
+}
