--- a/src/App/Knowledge/Knowledge.scss
+++ b/src/App/Knowledge/Knowledge.scss
@@ -1,3 +1,18 @@
+@import '../../styles/breakpoints.scss';
+
+.knowledge-container {
+    border: 1px solid #cde9ff;
+    border-radius: 1rem;
+    padding: 2rem !important;
+    @include tablet-down {
+        margin: 2rem !important;
+    }
+}
+
+.with-center {
+    background: white;
+}
+
 .tags {
     margin-bottom: 1rem !important;
     margin-left: 2rem;
@@ -18,8 +33,9 @@
 
 .skill {
     transition: 0.2s !important;
+    cursor: default;
 }
 
 .skill:hover {
-    background-color: #cde9ff !important; 
+    background-color: #cde9ff !important;
 }
