--- a/src/App/Experiences/Experiences.scss
+++ b/src/App/Experiences/Experiences.scss
@@ -1,7 +1,9 @@
+.two-column {
+    display: flex;
+    flex-direction: row;
+}
 .experiences {
     display: flex;
-    // flex-wrap: wrap;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: stretch;
 }
